--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://huyson201.github.io/weather-web-app/",
   "name": "weather-web-app",
   "private": true,
   "version": "0.0.0",
